...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fade_white"
    android:id="@+id/signInScreen"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/buyersigninimage"
        android:layout_width="234dp"
        android:layout_height="149dp"
...
